<resources>
    <string name="app_name" translatable="false">Price to Light</string>
    <string name="app_caption">Simplest way to see electricity price</string>

    <string name="hello_blank_fragment">blank</string>

    <string name="access_token" translatable="false">86067adbddf3c0653a20ca79b9cefbd72aba7e90d4feadb61e5131b7a0633ef1</string>
    <string name="tibberdev_url" translatable="false">https://developer.tibber.com</string>
    <string name="tibber_login_url" translatable="false">https://thewall.tibber.com/connect/authorize?response_type=token&amp;redirect_uri=http://localhost:3000&amp;client_id=31bffd92c744ddb8734227831f613c61192730e41b6da0726df8cdcfc8ecd80f&amp;scope=tibber_graph&amp;nonce=12</string>
    <string name="lifx_login_url" translatable="false">https://cloud.lifx.com/oauth/authorize</string>


    <!--<string name="lifx_token" translatable="false">cd9cbeb2b7080d08298e82df3090b3715453bbff79cc80175f1f4e042deddb31</string>-->


    <string name="bmc_link" translatable="false">https://www.buymeacoffee.com/MUmc9kq</string>
    <string name="bugs_link" translatable="false">https://github.com/Akshshr/PricetoLight/issues</string>

    <!--86067adbddf3c0653a20ca79b9cefbd72aba7e90d4feadb61e5131b7a0633ef1-->

    <!--ACCESSIBILITY-->
    <string name="title">Title</string>
    <string name="logo">App Logo</string>
    <string name="title_description">Description</string>
    <string name="main_price">Price</string>
    <string name="main_price_toggle">Price Toggle</string>
    <string name="configure_lights_title">Configure lights title</string>
    <string name="configure_lights_description">Configure lights description</string>


    <!--MAIN ACTIVITY-->
    <string name="price_unit">Öre/kWh</string>
    <string name="price_toggle_lable">Toggle to see price with VAT</string>
    <string name="inactive_home_title">Ooops!</string>
    <string name="inactive_home_description">Looks like this home does not have an active Subscription</string>

    <!--HELP ACTIVITY-->
    <string name="help_bugs">Did you notice any bugs? Or have features you would like to see implemented?</string>
    <string name="help_bugs_cta">REPORT BUGS</string>
    <string name="help_coffee">Want to help out?</string>
    <string name="help_coffee_cta">BUY ME COFFEE</string>
    <string name="help_share_cta">SHARE THIS APP</string>
    <string name="help_share_message">Check this app out that enables you to see your energy price with ease: https://play.google.com/store/apps/details?id=com.pricetolight</string>
    <string name="help_share_title">Share with:</string>

    <!--LOGIN ACTIVITY-->
    <string name="login">Login</string>
    <string name="login_button">Login with tibber</string>
    <string name="login_email_hint">E-mail as in Tibber</string>
    <string name="login_password_hint">Password</string>

    <string name="login_loading_text">Logging you in, nice and easy!</string>
    <string name="web_view_title">Tibber Login</string>

    <string name="login_no_customer_text">Don\'t know what Tibber is? Click here!</string>
    <string name="login_tibber_url" translatable="false">https://www.tibber.com</string>

    <!--SERVICE DIALOG-->
    <string name="service_dialog_title">Turn off/on the background service</string>
    <string name="service_dialog_description">This will start/stop updating the color of your chosen light based on the price</string>
    <string name="service_dialog_button_stop">Yes, Stop</string>
    <string name="service_dialog_button_start">Yes, Start</string>
    <string name="service_dialog_button_back">No, Go back</string>
    <string name="service_dialog_job_status">Current status: %1$s</string>

    <!--WIFI OFF DIALOG-->
    <string name="wifi_dialog_title">Looks like your Wi-Fi is turned OFF</string>
    <string name="wifi_dialog_description">We would need this to search for your Hue Bridge, you need to be on the same network as your bridge</string>
    <string name="wifi_dialog_button">Open Settings</string>


    <!--BOTTOM SHEET-->
    <string name="header1">Devices</string>
    <string name="connect_hue">Connect Philips Hue</string>

    <string name="connect_lifx">Connect Lifx</string>

    <string name="header2">About</string>
    <string name="licences">Licences</string>
    <string name="more_about">How can you help?</string>
    <string name="logout">LOGOUT</string>
    <string name="version" translatable="false">Ver 1.4</string>


    <!--CONNECT HUE FRAGMENT-->
    <string name="connect_hue_title">Connect Philips Hue Bridge</string>
    <string name="connect_hue_description">Now would be a good time to click on the main button on your hue bridge</string>
    <string name="connect_hue_searching">Searching for your bridge…</string>

    <!--CONNECT RESULT HUE FRAGMENT-->
    <string name="connect_result_button">Done</string>

    <string name="connect_result_hue_title">Hurrayy!! Paired to Philips Hue successfully</string>
    <string name="connect_result_hue_description">That was easy!</string>
    <string name="connect_result_hue_summary">We found the following number of lights:</string>


    <!--CONFIGURE LIGHT ACTIVITY-->
    <string name="toast_color_not_supported">Non-colored lamps are not supported</string>
    <string name="configure_title">Normal</string>
    <string name="configure_description">Normal</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="config_title">* Pick a light with which you would like to see color change *</string>

    <string name="price_normal">Normal</string>
    <string name="price_cheap">Cheap</string>
    <string name="price_expensive">Expensive</string>
    <string name="price_very_cheap">Very cheap</string>
    <string name="price_very_expensive">Very expensive</string>

    <!--LICENCE ACTIVITY-->
    <string name="tibber_dev_button">WANT TO DEVELOP FOR TIBBER?</string>

    <string name="licence_title">Open source licences</string>
    <string name="licence_description">A shout-out to the men and women who make awesome tools for the world to use</string>

    <!--SNACK BAR-->
    <string name="dismiss">Dismiss</string>
    <string name="background_service_started">Background service started</string>
    <string name="background_service_stopped">Background service stopped</string>


    <!--THROWABLES-->
    <string name="error_light_selection">Something went wrong, please try again</string>

    <string name="throwable_bridge_not_found">We couldn\'t find your bridge </string>
    <string name="throwable_bridge_auth_required">You need to re-pair your bridge to the app </string>
    <string name="throwable_bridge_connection_lost">We lost connection to your bridge :(</string>



</resources>
