<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="test"
            type="String"/>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.main.fragment.TurnOnWifiDialog">

    <TextView
        android:id="@+id/title"
        style="@style/Text.18spBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d12"
        android:layout_marginStart="@dimen/d6"
        android:layout_marginEnd="@dimen/d6"
        android:text="@string/wifi_dialog_title"
        android:textAlignment="center"
        android:layout_above="@+id/description"/>

    <TextView
        android:id="@+id/description"
        style="@style/Text.14spSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d16"
        android:layout_above="@+id/lottie_view"
        android:text="@string/wifi_dialog_description"
        android:textAlignment="center" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        app:lottie_cacheStrategy="strong"
        android:layout_marginTop="@dimen/d22"
        android:layout_height="110dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        app:lottie_fileName="wifi_off.json"
        app:lottie_scale="21"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/openSettings"
        android:layout_marginBottom="@dimen/d32"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue700"
        android:text="@string/wifi_dialog_button"
        tools:ignore="ButtonStyle" />



</RelativeLayout>


</layout>
