<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/d8"
    android:layout_marginEnd="@dimen/d8"
    android:background="@color/colorPrimaryTransparent"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_sheet"
        android:paddingBottom="@dimen/d24">

        <TextView
            android:id="@+id/header1"
            style="@style/Text.14spBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d12"
            android:layout_marginTop="@dimen/d16"
            android:layout_marginBottom="@dimen/d6"
            android:gravity="start"
            android:text="@string/header1"
            android:textColor="@color/blue700" />

        <RelativeLayout
            android:id="@+id/addDeviceLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rowSingleLine"
            android:layout_below="@+id/header1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/AddDevice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:src="@drawable/ic_menu_add_device" />

            <TextView
                style="@style/Text.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:layout_marginEnd="@dimen/d22"
                android:layout_toRightOf="@+id/AddDevice"
                android:gravity="start"
                android:text="@string/connect_hue" />

            <ImageView
                android:id="@+id/firstTimeUser"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/d22"
                android:src="@drawable/bulb_expensive"
                android:visibility="gone" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lifxLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rowSingleLine"
            android:layout_below="@+id/addDeviceLayout"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/lifxImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:src="@drawable/ic_lifx" />

            <TextView
                style="@style/Text.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:layout_marginEnd="@dimen/d22"
                android:layout_toRightOf="@+id/lifxImg"
                android:gravity="start"
                android:text="@string/connect_lifx" />




        </RelativeLayout>


        <TextView
            android:id="@+id/header2"
            style="@style/Text.14spBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lifxLayout"
            android:layout_marginStart="@dimen/d12"
            android:layout_marginTop="@dimen/d16"
            android:layout_marginBottom="@dimen/d6"
            android:gravity="start"
            android:text="@string/header2"
            android:textColor="@color/blue700" />

        <RelativeLayout
            android:id="@+id/licencesLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rowSingleLine"
            android:layout_below="@+id/header2"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/licencesImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:src="@drawable/ic_licenses" />

            <TextView
                style="@style/Text.14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:layout_marginEnd="@dimen/d22"
                android:layout_toRightOf="@+id/licencesImage"
                android:gravity="start"
                android:text="@string/licences" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/helpMoreLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rowSingleLine"
            android:layout_below="@+id/licencesLayout"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/aboutAppImage"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:src="@drawable/ic_logo_dark" />

            <TextView
                style="@style/Text.14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/d12"
                android:layout_marginEnd="@dimen/d22"
                android:layout_toRightOf="@+id/aboutAppImage"
                android:gravity="start"
                android:text="@string/more_about" />
        </RelativeLayout>

        <TextView
            android:id="@+id/appVersion"
            style="@style/Text.10spLightSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpMoreLayout"
            android:layout_marginTop="@dimen/d12"
            android:text="@string/version"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/logout"
            style="@style/Text.14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appVersion"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/d12"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/red300" />
    </RelativeLayout>

</RelativeLayout>