<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="test"
            type="String"/>
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_main"
    tools:context=".app.main.LicencesActivity">

    <com.pricetolight.app.widget.CloudsView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"/>

    <com.pricetolight.app.widget.MainToolbar
        android:id="@+id/toolbar"
        style="@style/AppWidget.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryTransparent"
        android:paddingTop="@dimen/d22" />

    <TextView
        android:text="@string/licence_description"
        android:layout_marginBottom="@dimen/d12"
        android:layout_marginEnd="@dimen/d16"
        android:layout_marginStart="@dimen/d16"
        android:layout_marginTop="@dimen/d4"
        style="@style/Text.Bright.14spMedium"
        android:id="@+id/description"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tibberDev"
        style="@style/AppTheme.ButtonBright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/description"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d8"
        android:layout_marginBottom="@dimen/d12"
        android:text="@string/tibber_dev_button"
        android:textIsSelectable="false"
        tools:text="@string/login_button" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@drawable/bg_sheet"
        android:layout_below="@+id/tibberDev"
        android:layout_marginEnd="@dimen/d4"
        android:layout_marginStart="@dimen/d4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>



</RelativeLayout>


</layout>