<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tes"
            type="String" />

        <variable
            name="jobRunning"
            type="Boolean" />
        <variable
            name="jobStatus"
            type="String" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog"
        tools:context=".app.main.fragment.TurnOffServiceDialog">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/jobScheduleStatusText"
            style="@style/Text.12spBold"
            android:background="@drawable/bg_text"
            android:layout_alignParentTop="true"
            android:elevation="@dimen/d2"
            android:paddingStart="@dimen/d12"
            android:paddingTop="@dimen/d4"
            android:paddingBottom="@dimen/d4"
            android:paddingEnd="@dimen/d12"
            android:textColor="@{jobRunning ? @color/textPrimaryDark : @color/red500}"
            android:layout_marginTop="@dimen/d8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/service_dialog_job_status(jobStatus)}"
            android:textAlignment="center"
            android:clickable="true"
            android:focusable="true"
            tools:text="Current status"/>

        <ImageView
            android:src="@{jobRunning ? @drawable/bulb_on : @drawable/bulb_off}"
            android:layout_width="100dp"
            android:layout_height="140dp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@+id/title"
            android:layout_marginStart="@dimen/d12"
            android:layout_marginEnd="@dimen/d12"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/d22"
            android:src="@{jobRunning ? @drawable/ic_power_on : @drawable/ic_power_off}"
            />

        <TextView
            android:id="@+id/title"
            style="@style/Text.18spBold"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d12"
            android:layout_marginStart="@dimen/d6"
            android:layout_marginEnd="@dimen/d6"
            android:text="@string/service_dialog_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/description"
            style="@style/Text.14spSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_margin="@dimen/d12"
            android:text="@string/service_dialog_description"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/noButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/d6"
                android:layout_weight="1"
                android:backgroundTint="@color/blue700"
                android:text="@string/service_dialog_button_back"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/d6"
                android:layout_weight="1"
                android:backgroundTint="@color/red500"
                android:text="@{jobRunning ? @string/service_dialog_button_stop : @string/service_dialog_button_start}"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </RelativeLayout>


</layout>